// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[gatsby-source-wordpress-experimental] data resolution resolves menus 1`] = `
Object {
  "data": Object {
    "allWpMenu": Object {
      "nodes": Array [
        Object {
          "count": 4,
          "id": "bmF2X21lbnU6MTc=",
          "menuId": 17,
          "menuItems": Object {
            "nodes": Array [
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 564,
                "id": "bmF2X21lbnVfaXRlbTo1NjQ=",
                "label": "Activity",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/activity/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [
                          Object {
                            "label": "test custom link",
                            "url": "https://google.com",
                          },
                        ],
                      },
                      "connectedObject": Object {
                        "__typename": "WpPost",
                        "featuredImage": Object {
                          "node": Object {
                            "title": "84-1000×1000",
                          },
                        },
                        "title": "Hello world!",
                        "uri": "/2020/02/25/hello-world/",
                      },
                      "databaseId": 566,
                      "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                      "label": "Hello world!",
                    },
                  ],
                },
                "databaseId": 565,
                "id": "bmF2X21lbnVfaXRlbTo1NjU=",
                "label": "Sample Page",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/sample-page/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [],
                      },
                      "connectedObject": Object {
                        "__typename": "WpMenuItem",
                      },
                      "databaseId": 567,
                      "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                      "label": "test custom link",
                    },
                  ],
                },
                "databaseId": 566,
                "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                "label": "Hello world!",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/2020/02/25/hello-world/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 567,
                "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                "label": "test custom link",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "https://google.com",
              },
            ],
          },
          "name": "main menu",
        },
      ],
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves menus INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpMenu": Object {
      "nodes": Array [
        Object {
          "count": 4,
          "id": "bmF2X21lbnU6MTc=",
          "menuId": 17,
          "menuItems": Object {
            "nodes": Array [
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 564,
                "id": "bmF2X21lbnVfaXRlbTo1NjQ=",
                "label": "Activity",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/activity/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [
                          Object {
                            "label": "test custom link",
                            "url": "https://google.com",
                          },
                        ],
                      },
                      "connectedObject": Object {
                        "__typename": "WpPost",
                        "featuredImage": Object {
                          "node": Object {
                            "title": "84-1000×1000",
                          },
                        },
                        "title": "Hello world! DELTA SYNC",
                        "uri": "/2020/02/25/hello-world/",
                      },
                      "databaseId": 566,
                      "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                      "label": "Hello world!",
                    },
                  ],
                },
                "databaseId": 565,
                "id": "bmF2X21lbnVfaXRlbTo1NjU=",
                "label": "Sample Page",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/sample-page/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [],
                      },
                      "connectedObject": Object {
                        "__typename": "WpMenuItem",
                      },
                      "databaseId": 567,
                      "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                      "label": "test custom link",
                    },
                  ],
                },
                "databaseId": 566,
                "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                "label": "Hello world!",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/2020/02/25/hello-world/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 567,
                "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                "label": "test custom link",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "https://google.com",
              },
            ],
          },
          "name": "main menu",
        },
      ],
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves pages 1`] = `
Object {
  "data": Object {
    "allWpPage": Object {
      "nodes": Array [
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": Array [
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_Header",
                "header": "header text test",
              },
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_TeamMembers",
                "teamMembers": Array [
                  Object {
                    "teamMember": Array [
                      Object {
                        "__typename": "WpTeamMember",
                        "acfData": Object {
                          "fieldGroupName": "acfData",
                          "name": "Jason",
                          "portrait": Object {
                            "altText": "",
                            "caption": null,
                            "commentStatus": "open",
                            "databaseId": 99,
                            "date": "2020-03-02T20:58:44",
                            "description": null,
                            "desiredSlug": null,
                            "sourceUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io/wp-content/uploads/2020/03/avatar.jpg",
                          },
                          "projects": Array [
                            Object {
                              "content": null,
                              "databaseId": 172,
                              "date": "2020-03-02T22:17:12",
                              "id": "cG9zdDoxNzI=",
                              "slug": "wpgraphql",
                              "status": "publish",
                              "title": "WPGraphQL",
                              "uri": "/project/wpgraphql/",
                            },
                          ],
                          "title": "WPGraphQL guy",
                          "twitterlink": Object {
                            "target": "_blank",
                            "title": "",
                            "url": "https://twitter.com/jasonbahl",
                          },
                          "webSite": Object {
                            "target": "",
                            "title": "",
                            "url": "https://jasonbahl.com/",
                          },
                        },
                        "content": "
<p>Creator and maintainer of <a href=\\"https://www.wpgraphql.com/\\">WPGraphQL</a> (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "databaseId": 98,
                        "date": "2020-03-02T20:59:13",
                        "desiredSlug": null,
                        "enclosure": null,
                        "excerpt": "<p>Creator and maintainer of WPGraphQL (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "id": "cG9zdDo5OA==",
                        "link": "/team_member/jason-bahl/",
                        "menuOrder": null,
                        "pingStatus": "open",
                        "seo": Object {
                          "focuskw": "",
                          "metaDesc": "",
                          "metaKeywords": "",
                          "metaRobotsNofollow": "",
                          "title": "Jason Bahl - Automated testing for Gatsby source WordPress V4",
                        },
                        "slug": "jason-bahl",
                        "status": "publish",
                        "terms": null,
                        "title": "Jason Bahl",
                        "toPing": null,
                        "uri": "/team_member/jason-bahl/",
                      },
                    ],
                  },
                ],
              },
            ],
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "French home page",
          "translations": Array [
            Object {
              "title": "Members",
            },
          ],
          "uri": "/fr/french-home-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": null,
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Child page",
          "translations": Array [],
          "uri": "/sample-page/child-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": Array [
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_Header",
                "header": "header text test",
              },
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_TeamMembers",
                "teamMembers": Array [
                  Object {
                    "teamMember": Array [
                      Object {
                        "__typename": "WpTeamMember",
                        "acfData": Object {
                          "fieldGroupName": "acfData",
                          "name": "Jason",
                          "portrait": Object {
                            "altText": "",
                            "caption": null,
                            "commentStatus": "open",
                            "databaseId": 99,
                            "date": "2020-03-02T20:58:44",
                            "description": null,
                            "desiredSlug": null,
                            "sourceUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io/wp-content/uploads/2020/03/avatar.jpg",
                          },
                          "projects": Array [
                            Object {
                              "content": null,
                              "databaseId": 172,
                              "date": "2020-03-02T22:17:12",
                              "id": "cG9zdDoxNzI=",
                              "slug": "wpgraphql",
                              "status": "publish",
                              "title": "WPGraphQL",
                              "uri": "/project/wpgraphql/",
                            },
                          ],
                          "title": "WPGraphQL guy",
                          "twitterlink": Object {
                            "target": "_blank",
                            "title": "",
                            "url": "https://twitter.com/jasonbahl",
                          },
                          "webSite": Object {
                            "target": "",
                            "title": "",
                            "url": "https://jasonbahl.com/",
                          },
                        },
                        "content": "
<p>Creator and maintainer of <a href=\\"https://www.wpgraphql.com/\\">WPGraphQL</a> (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "databaseId": 98,
                        "date": "2020-03-02T20:59:13",
                        "desiredSlug": null,
                        "enclosure": null,
                        "excerpt": "<p>Creator and maintainer of WPGraphQL (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "id": "cG9zdDo5OA==",
                        "link": "/team_member/jason-bahl/",
                        "menuOrder": null,
                        "pingStatus": "open",
                        "seo": Object {
                          "focuskw": "",
                          "metaDesc": "",
                          "metaKeywords": "",
                          "metaRobotsNofollow": "",
                          "title": "Jason Bahl - Automated testing for Gatsby source WordPress V4",
                        },
                        "slug": "jason-bahl",
                        "status": "publish",
                        "terms": null,
                        "title": "Jason Bahl",
                        "toPing": null,
                        "uri": "/team_member/jason-bahl/",
                      },
                    ],
                  },
                ],
              },
            ],
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Members",
          "translations": Array [
            Object {
              "title": "French home page",
            },
          ],
          "uri": "/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": null,
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Activity",
          "translations": Array [],
          "uri": "/activity/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": null,
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Sample Page",
          "translations": Array [],
          "uri": "/sample-page/",
          "wpChildren": Object {
            "nodes": Array [
              Object {
                "title": "Child page",
              },
            ],
          },
        },
      ],
    },
    "testPage": Object {
      "title": "Sample Page",
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves pages INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpPage": Object {
      "nodes": Array [
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": Array [
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_Header",
                "header": "header text test",
              },
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_TeamMembers",
                "teamMembers": Array [
                  Object {
                    "teamMember": Array [
                      Object {
                        "__typename": "WpTeamMember",
                        "acfData": Object {
                          "fieldGroupName": "acfData",
                          "name": "Jason",
                          "portrait": Object {
                            "altText": "",
                            "caption": null,
                            "commentStatus": "open",
                            "databaseId": 99,
                            "date": "2020-03-02T20:58:44",
                            "description": null,
                            "desiredSlug": null,
                            "sourceUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io/wp-content/uploads/2020/03/avatar.jpg",
                          },
                          "projects": Array [
                            Object {
                              "content": null,
                              "databaseId": 172,
                              "date": "2020-03-02T22:17:12",
                              "id": "cG9zdDoxNzI=",
                              "slug": "wpgraphql",
                              "status": "publish",
                              "title": "WPGraphQL",
                              "uri": "/project/wpgraphql/",
                            },
                          ],
                          "title": "WPGraphQL guy",
                          "twitterlink": Object {
                            "target": "_blank",
                            "title": "",
                            "url": "https://twitter.com/jasonbahl",
                          },
                          "webSite": Object {
                            "target": "",
                            "title": "",
                            "url": "https://jasonbahl.com/",
                          },
                        },
                        "content": "
<p>Creator and maintainer of <a href=\\"https://www.wpgraphql.com/\\">WPGraphQL</a> (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "databaseId": 98,
                        "date": "2020-03-02T20:59:13",
                        "desiredSlug": null,
                        "enclosure": null,
                        "excerpt": "<p>Creator and maintainer of WPGraphQL (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "id": "cG9zdDo5OA==",
                        "link": "/team_member/jason-bahl/",
                        "menuOrder": null,
                        "pingStatus": "open",
                        "seo": Object {
                          "focuskw": "",
                          "metaDesc": "",
                          "metaKeywords": "",
                          "metaRobotsNofollow": "",
                          "title": "Jason Bahl - Automated testing for Gatsby source WordPress V4",
                        },
                        "slug": "jason-bahl",
                        "status": "publish",
                        "terms": null,
                        "title": "Jason Bahl",
                        "toPing": null,
                        "uri": "/team_member/jason-bahl/",
                      },
                    ],
                  },
                ],
              },
            ],
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "French home page",
          "translations": Array [
            Object {
              "title": "Members",
            },
          ],
          "uri": "/fr/french-home-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": null,
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Child page",
          "translations": Array [],
          "uri": "/sample-page/child-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": Array [
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_Header",
                "header": "header text test",
              },
              Object {
                "__typename": "WpPage_Acfpagefields_Flex_TeamMembers",
                "teamMembers": Array [
                  Object {
                    "teamMember": Array [
                      Object {
                        "__typename": "WpTeamMember",
                        "acfData": Object {
                          "fieldGroupName": "acfData",
                          "name": "Jason",
                          "portrait": Object {
                            "altText": "",
                            "caption": null,
                            "commentStatus": "open",
                            "databaseId": 99,
                            "date": "2020-03-02T20:58:44",
                            "description": null,
                            "desiredSlug": null,
                            "sourceUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io/wp-content/uploads/2020/03/avatar.jpg",
                          },
                          "projects": Array [
                            Object {
                              "content": null,
                              "databaseId": 172,
                              "date": "2020-03-02T22:17:12",
                              "id": "cG9zdDoxNzI=",
                              "slug": "wpgraphql",
                              "status": "publish",
                              "title": "WPGraphQL",
                              "uri": "/project/wpgraphql/",
                            },
                          ],
                          "title": "WPGraphQL guy",
                          "twitterlink": Object {
                            "target": "_blank",
                            "title": "",
                            "url": "https://twitter.com/jasonbahl",
                          },
                          "webSite": Object {
                            "target": "",
                            "title": "",
                            "url": "https://jasonbahl.com/",
                          },
                        },
                        "content": "
<p>Creator and maintainer of <a href=\\"https://www.wpgraphql.com/\\">WPGraphQL</a> (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "databaseId": 98,
                        "date": "2020-03-02T20:59:13",
                        "desiredSlug": null,
                        "enclosure": null,
                        "excerpt": "<p>Creator and maintainer of WPGraphQL (GraphQL for WordPress). Occasional conference speaker.</p>
",
                        "id": "cG9zdDo5OA==",
                        "link": "/team_member/jason-bahl/",
                        "menuOrder": null,
                        "pingStatus": "open",
                        "seo": Object {
                          "focuskw": "",
                          "metaDesc": "",
                          "metaKeywords": "",
                          "metaRobotsNofollow": "",
                          "title": "Jason Bahl - Automated testing for Gatsby source WordPress V4",
                        },
                        "slug": "jason-bahl",
                        "status": "publish",
                        "terms": null,
                        "title": "Jason Bahl",
                        "toPing": null,
                        "uri": "/team_member/jason-bahl/",
                      },
                    ],
                  },
                ],
              },
            ],
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Members",
          "translations": Array [
            Object {
              "title": "French home page",
            },
          ],
          "uri": "/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": null,
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Activity",
          "translations": Array [],
          "uri": "/activity/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
            "flex": null,
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Sample Page DELTA SYNC",
          "translations": Array [],
          "uri": "/sample-page/",
          "wpChildren": Object {
            "nodes": Array [
              Object {
                "title": "Child page",
              },
            ],
          },
        },
      ],
    },
    "testPage": Object {
      "title": "Sample Page DELTA SYNC",
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves posts 1`] = `
Object {
  "data": Object {
    "allWpPost": Object {
      "nodes": Array [
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": Object {
            "node": Object {
              "altText": "",
              "sourceUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
            },
          },
          "title": "Hello world!",
        },
      ],
    },
    "testPost": Object {
      "title": "Hello world!",
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves posts INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpPost": Object {
      "nodes": Array [
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": Object {
            "node": Object {
              "altText": "",
              "sourceUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
            },
          },
          "title": "Hello world! DELTA SYNC",
        },
      ],
    },
    "testPost": Object {
      "title": "Hello world! DELTA SYNC",
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves root fields 1`] = `
Object {
  "data": Object {
    "wp": Object {
      "allSettings": Object {
        "discussionSettingsDefaultCommentStatus": "open",
        "discussionSettingsDefaultPingStatus": "open",
        "generalSettingsDateFormat": "F j, Y",
        "generalSettingsDescription": "Just another WordPress site",
        "generalSettingsLanguage": "en_US",
        "generalSettingsStartOfWeek": 1,
        "generalSettingsTimeFormat": "g:i a",
        "generalSettingsTimezone": "",
        "generalSettingsTitle": "Automated testing for Gatsby source WordPress V4",
        "generalSettingsUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io",
        "readingSettingsPostsPerPage": 10,
        "writingSettingsDefaultCategory": 23,
        "writingSettingsDefaultPostFormat": "",
        "writingSettingsUseSmilies": true,
      },
      "nodeType": null,
      "writingSettings": Object {
        "defaultCategory": 23,
        "defaultPostFormat": "0",
        "useSmilies": true,
      },
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves root fields INCREMENTED 1`] = `
Object {
  "data": Object {
    "wp": Object {
      "allSettings": Object {
        "discussionSettingsDefaultCommentStatus": "open",
        "discussionSettingsDefaultPingStatus": "open",
        "generalSettingsDateFormat": "F j, Y",
        "generalSettingsDescription": "Just another WordPress site",
        "generalSettingsLanguage": "en_US",
        "generalSettingsStartOfWeek": 1,
        "generalSettingsTimeFormat": "g:i a",
        "generalSettingsTimezone": "",
        "generalSettingsTitle": "Automated testing for Gatsby source WordPress V4",
        "generalSettingsUrl": "https://dev-automated-testing-gatsby-source-wordpress-wpgraphql.pantheonsite.io",
        "readingSettingsPostsPerPage": 10,
        "writingSettingsDefaultCategory": 23,
        "writingSettingsDefaultPostFormat": "",
        "writingSettingsUseSmilies": true,
      },
      "nodeType": null,
      "writingSettings": Object {
        "defaultCategory": 23,
        "defaultPostFormat": "0",
        "useSmilies": true,
      },
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves users 1`] = `
Object {
  "data": Object {
    "allWpUser": Object {
      "nodes": Array [
        Object {
          "databaseId": 1,
          "name": "Tyler",
          "pages": Object {
            "nodes": Array [
              Object {
                "title": "French home page",
              },
              Object {
                "title": "Child page",
              },
              Object {
                "title": "Members",
              },
              Object {
                "title": "Activity",
              },
              Object {
                "title": "Sample Page",
              },
            ],
          },
          "posts": Object {
            "nodes": Array [
              Object {
                "title": "Hello world!",
              },
            ],
          },
        },
      ],
    },
    "testUser": Object {
      "firstName": "Tyler",
    },
  },
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves users INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpUser": Object {
      "nodes": Array [
        Object {
          "databaseId": 1,
          "name": "Tyler",
          "pages": Object {
            "nodes": Array [
              Object {
                "title": "French home page",
              },
              Object {
                "title": "Child page",
              },
              Object {
                "title": "Members",
              },
              Object {
                "title": "Activity",
              },
              Object {
                "title": "Sample Page DELTA SYNC",
              },
            ],
          },
          "posts": Object {
            "nodes": Array [
              Object {
                "title": "Hello world! DELTA SYNC",
              },
            ],
          },
        },
      ],
    },
    "testUser": Object {
      "firstName": "Tyler DELTA SYNC",
    },
  },
}
`;
